# minhome

./: .dockerignore  .env.template  .gitignore  AGENTS.md  Makefile  README.md  TODO.md  automations.json  clean.sh  config.json  docker-compose.dev.yml  docker-compose.hybrid.yml  docker-compose.tunnel.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.cursor/: mcp.json
.cursor/rules/: build-and-dev.mdc
.github/workflows/: android.yml  build.yml
android/: Dockerfile  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
cli/: README.md  package.json
cli/src/: index.ts
frontend/: README.md  index.html  login.html  package.json  tsconfig.json  vite.config.login.ts  vite.config.ts
frontend/dev-dist/: sw.js
frontend/src/: App.tsx  api.ts  index.css  login-main.tsx  main.tsx  react-canary-view-transition.d.ts  types.ts
frontend/src/components/: AutomationsView.tsx  ChatHistoryModal.tsx  ChatPane.tsx  DebugView.tsx  DeviceBadge.tsx  DevicesView.tsx  EntitiesView.tsx  ListsView.tsx  LoginPage.tsx  Logo.tsx  MemoizedMarkdown.tsx  RoomView.tsx  (+5 more)
infra/tunnel/: Caddyfile  README.md  cert.pem  setup.sh
server/: Dockerfile  README.md  package.json  tsconfig.json
server/src/: app.ts  audio-utils.ts  auth.ts  automation-tools.ts  automations.ts  chat.ts  config.ts  debug-log.ts  display.ts  index.ts  mcp.ts  mqtt.ts  tools.ts  tts.ts  voice-audio-capture.ts  voice-browser-webrtc.ts  voice-browser-ws.ts  voice-pipeline.ts  voice-realtime.ts  voice.ts
voice-bridge/: Dockerfile  bridge.py  pyproject.toml
(+96 files in other folders)
