[project]
name = "voice-bridge"
version = "0.1.0"
description = "Bridge between HA Voice PE (ESPHome) and minhome server"
requires-python = ">=3.12"
dependencies = [
    "aioesphomeapi>=43.14.0",
    "numpy>=2.0.0",
    "websockets>=16.0",
    "zeroconf>=0.131.0",
]

[dependency-groups]
dev = [
    "watchfiles>=1.0.0",
]
